fixing menu alignment

--- a/amadeus/static/css/base/amadeus.css
+++ b/amadeus/static/css/base/amadeus.css
@@ -10,6 +10,7 @@
     color: white;
     width: 80%;
     margin-bottom: 3%;
+    text-align: center;
 }
 
 #sidebar-menu > .item:hover{
@@ -20,7 +21,7 @@
 
 
 #sidebar-menu > .item i {
-  margin-left: 15%;
+  
 }
 
 
